syntax = "proto3";

package request;

message Request {
  string verification_code = 1;
}
